added composer package

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,6 @@
       "Nullix\\CryptoJsAes\\": "src/"
     }
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "version": "2.0.1"
 }
