added tests and test action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,6 @@ jobs:
   tests:
     timeout-minutes: 10
     runs-on: ubuntu-latest
-    name: PHP ${{ matrix.php-versions }}
     steps:
     - uses: actions/checkout@v2
 
@@ -28,13 +27,13 @@ jobs:
         php-version: latest
 
     - name: Start PHP 7.0 server
-      run: php7.0 -S 127.0.0.1:9970
+      run: php7.0 -S 127.0.0.1:9970 &
 
     - name: Start PHP 8.2 server
-      run: php8.2 -S 127.0.0.1:9982
+      run: php8.2 -S 127.0.0.1:9982 &
 
     - name: Start PHP latest server
-      run: php -S 127.0.0.1:9999
+      run: php -S 127.0.0.1:9999 &
 
     - uses: actions/setup-node@v2
       with:
