--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,15 @@
       "Nullix\\CryptoJsAes\\": "src/"
     }
   },
-  "version": "2.1.1",
+  "archive": {
+    "exclude": [
+      "/tests",
+      ".gitignore",
+      "package.json",
+      "playwright.config.ts"
+    ]
+  },
+  "version": "2.2.0",
   "require": {
     "php": ">=7.0.0",
     "ext-openssl": "*",
