--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
-    "typescript": "^4.7.4",
-    "@playwright/test": "^1.24.1"
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@playwright/test": "^1.35.0"
   }
 }
